--- a/FinalAppIOS/GoogleService-Info.plist
+++ b/FinalAppIOS/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>781283869976-jp45su0uo7n4eser21fa9sq5m2qe211v.apps.googleusercontent.com</string>
+	<string>829067264842-aculkjcq0bcprev8l2j4kqrebjn5h0ni.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.781283869976-jp45su0uo7n4eser21fa9sq5m2qe211v</string>
+	<string>com.googleusercontent.apps.829067264842-aculkjcq0bcprev8l2j4kqrebjn5h0ni</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBcecZQfQGmqr943-g3Tuwq66sGp5HnZck</string>
+	<string>AIzaSyBvgFXIeHz917qi_88NsGl_Ffvawwbu1ZQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>781283869976</string>
+	<string>829067264842</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>co.il.hackeru.ForumApp</string>
+	<string>moshiko.swift.FinalAppIOS</string>
 	<key>PROJECT_ID</key>
-	<string>forumapp-ba12a</string>
+	<string>finalappios</string>
 	<key>STORAGE_BUCKET</key>
-	<string>forumapp-ba12a.appspot.com</string>
+	<string>finalappios.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:781283869976:ios:220e36cefd306bf8d1ca6d</string>
+	<string>1:829067264842:ios:e826bf0c8b040912e477b3</string>
 	<key>DATABASE_URL</key>
-	<string>https://forumapp-ba12a.firebaseio.com</string>
+	<string>https://finalappios.firebaseio.com</string>
 </dict>
 </plist>
